# Learning_CMake

./: .gitignore  CMakeLists.txt  README.md
Conditional_Construct/: CMakeLists.txt  Executable_2.c  MathFunctions.h  README.md
Create_Executable/: CMakeLists.txt  Create_First_Executable.c  README.md
Create_a_exe_and_lib/: CMakeLists.txt  Executable.c  README.md
Using_Option/: CMakeLists.txt  Executable_3.c  Executable_3.h  MathFunctions.c  README.md
